hide mute/solo unless in voicing mode

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="static/css/base.css">
 
 	<!-- jQuery/Electron "bug": https://techsparx.com/nodejs/electron/load-jquery-bootstrap.html -->
-	<script src="static/js/jquery-3.4.1.slim.js" type="text/javascript"
+	<script src="static/js/jquery-3.4.1.min.js" type="text/javascript"
 		onload="window.$ = window.jQuery = module.exports;"></script>
 	<script src="static/js/popper.min.js"></script>
 	<script src="static/js/bootstrap.min.js"></script>
