--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -20,7 +20,7 @@
 		<!-- Old School - table layout -->
 
 		Patch Type:&nbsp;
-		<select class="vceEdit" id="patchType" disabled>
+		<select class="vceEdit" id="patchType" onchange="viewVCE_voice.changePatchType(this.value)" disabled>
 			<option value="0">1 + 2 + 3 + 4 + 5 + 6 + 7 + 8</option>
 			<option value="1">(1~2) + (3~4) + (5~6) + (7~8)</option>
 			<option value="2">((1+2+3)~4) + ((5+6+7)~8)</option>
