manage filters via uncompressed array in js; support for updateing filters in go

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -645,132 +645,227 @@
 				<tr>
 					<td>1</td>
 					<td>11</td>
-					<td id="ft1" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[1]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 
 					<td rowspan="8" style="padding:10px;"></td>
 					<td rowspan="8" style="border-left:1px solid #666;padding:10px;"></td>
 					<td>9</td>
 					<td>72</td>
-					<td id="ft9" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[9]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 
 
 					<td rowspan="8" style="padding:10px;"></td>
 					<td rowspan="8" style="border-left:1px solid #666;padding:10px;"></td>
 					<td>17</td>
 					<td>461</td>
-					<td id="ft17" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[17]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 
 
 					<td rowspan="8" style="padding:10px;"></td>
 					<td rowspan="8" style="border-left:1px solid #666;padding:10px;"></td>
 					<td>25</td>
 					<td>2929</td>
-					<td id="ft25" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[25]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 				</tr>
 
 				<tr>
 					<td>2</td>
 					<td>14</td>
-					<td id="ft2" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[2]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>10</td>
 					<td>91</td>
-					<td id="ft10" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[10]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>18</td>
 					<td>581</td>
-					<td id="ft18" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[18]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>26</td>
 					<td>3691</td>
-					<td id="ft26" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[26]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 				</tr>
 
 				<tr>
 					<td>3</td>
 					<td>18</td>
-					<td id="ft3" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[3]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>11</td>
 					<td>115</td>
-					<td id="ft11" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[11]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>19</td>
 					<td>732</td>
-					<td id="ft19" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[19]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>27</td>
 					<td>4650</td>
-					<td id="ft27" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[27]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 				</tr>
 
 				<tr>
 					<td>4</td>
 					<td>72</td>
-					<td id="ft4" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[4]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>12</td>
 					<td>145</td>
-					<td id="ft12" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[12]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>20</td>
 					<td>922</td>
-					<td id="ft20" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[20]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>28</td>
 					<td>5859</td>
-					<td id="ft28" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[28]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 				</tr>
 
 				<tr>
 					<td>5</td>
 					<td>28</td>
-					<td id="ft5" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[5]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>13</td>
 					<td>183</td>
-					<td id="ft13" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[13]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>21</td>
 					<td>1162</td>
-					<td id="ft21" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[21]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>29</td>
 					<td>7382</td>
-					<td id="ft29" class="val"></td>
-				</tr>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[29]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</tr>
 
 				<tr>
 					<td>6</td>
 					<td>36</td>
-					<td id="ft6" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[6]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>14</td>
 					<td>230</td>
-					<td id="ft14" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[14]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>22</td>
 					<td>1464</td>
-					<td id="ft22" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[22]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>30</td>
 					<td>9300</td>
-					<td id="ft30" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[30]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 				</tr>
 
 				<tr>
 					<td>7</td>
 					<td>45</td>
-					<td id="ft7" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[7]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>15</td>
 					<td>290</td>
-					<td id="ft15" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[15]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>23</td>
 					<td>1845</td>
-					<td id="ft23" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[23]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>31</td>
 					<td>11718</td>
-					<td id="ft31" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[31]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 				</tr>
 
 				<tr>
 					<td>8</td>
 					<td>57</td>
-					<td id="ft8" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[8]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>16</td>
 					<td>366</td>
-					<td id="ft16" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[16]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>24</td>
 					<td>2325</td>
-					<td id="ft24" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[24]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 					<td>32</td>
 					<td>14764</td>
-					<td id="ft32" class="val"></td>
+					<td class="val">
+					  <input class="vceEdit vceNum" type="number" id="filter[32]" min="-64" max="63"
+									onchange="viewVCE_filters.onchange(this)" disabled />
+					</td>
 				</tr>
 
 			</tbody>
