--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -581,7 +581,7 @@
 
 		Filter:&nbsp;
 		<select id="filterSelect"
-			onchange="viewVCE_filters.filtersChartUpdate(this.options[this.selectedIndex].value,this.options[this.selectedIndex].innerHTML)">
+			onchange="viewVCE_filters.filtersChartUpdate(this.options[this.selectedIndex].value,this.options[this.selectedIndex].innerHTML,true)">
 			<option>Bf 1</option>
 			<option>Bf 2</option>
 		</select>
