--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -6,28 +6,18 @@
 	<meta charset="UTF-8">
 
 	<link rel="stylesheet" href="static/css/bootstrap.min-darkly.css">
-	<link rel="stylesheet" href="static/css/jquery.bootstrap-touchspin.css"/>
+	<link rel="stylesheet" href="static/css/jquery.bootstrap-touchspin.css" />
 	<link rel="stylesheet" href="static/css/base.css">
 
-	<script>
-    	  <!-- https://www.electronjs.org/docs/faq -->
-    	  window.nodeRequire = require;
-	  delete window.require;
-	  delete window.exports;
-	  delete window.module;
-	</script>
-	<script src="static/js/jquery-3.4.1.min.js" type="text/javascript"></script>
-  
+	<script src="static/js/jquery-3.4.1.min.js" type="text/javascript"
+		onload="window.$ = window.jQuery = module.exports;"></script>
+
 	<script src="static/js/popper.min.js"></script>
 	<script src="static/js/bootstrap.min.js"></script>
-	<script src="static/js/jquery.bootstrap-touchspin.js"></script>
 	<script src="static/js/Chart.bundle.min.js"></script>
 
-	<script>
-    	  window.require = window.nodeRequire;
-	</script>
-	
 	<script src="static/js/index.js"></script>
+	<script src="static/js/debug.js"></script>
 	<script src="static/js/viewVCE.js"></script>
 	<script src="static/js/viewVCE_voice.js"></script>
 	<script src="static/js/viewVCE_envs.js"></script>
@@ -35,6 +25,22 @@
 	<script src="static/js/viewVCE_keyeq.js"></script>
 	<script src="static/js/viewVCE_keyprop.js"></script>
 	<script src="static/js/viewCRT.js"></script>
+
+	<script>
+		/* https://www.electronjs.org/docs/faq */
+		window.nodeRequire = require;
+		window.nodeExports = window.exports;
+		window.nodeModule = window.module;
+		delete window.require;
+		delete window.exports;
+		delete window.module;
+	</script>
+	<script src="static/js/jquery.bootstrap-touchspin.js"></script>
+	<script>
+		window.require = window.nodeRequire;
+		window.exports = window.nodeExports;
+		window.module = window.nodeModule;
+	</script>
 
 
 
@@ -216,7 +222,7 @@ TEST a "more button" design:
 	</div>
 
 	<script type="text/javascript">
-	  index.init();
+		index.init();
 	</script>
 
 </body>
