--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -155,7 +155,7 @@ TEST a "more button" design:
 					</div>
 
 					<div class="navbar-text dropdown" style="width:30em;">
-						<table onclick="index.dropdownMenu('helpDropdown-content');" class="dropbtn">
+						<table id="helpButton" onclick="index.dropdownMenu('helpDropdown-content');" class="dropbtn">
 							<tr>
 								<td class="centered"><img src="static/images/grey-button-off-full.png" height="30">
 								</td>
@@ -165,8 +165,15 @@ TEST a "more button" design:
 							</tr>
 						</table>
 						<div class="dropdown-content" id="helpDropdown-content">
-							<a href="#" onclick="index.showAbout();">About</a>
-							<a href="#" onclick="index.showPreferences();">Preferences</a>
+						  q
+
+
+						  :q
+
+
+
+						  <a id="aboutMenuItem" href="#" onclick="index.showAbout();">About</a>
+							<a id="preferencesMenuItem" href="#" onclick="index.showPreferences();">Preferences</a>
 						</div>
 					</div>
 
