ids for testing

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -650,7 +650,7 @@
 					<td>1</td>
 					<td>11</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[1]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[1]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 
@@ -659,7 +659,7 @@
 					<td>9</td>
 					<td>72</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[9]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[9]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 
@@ -669,7 +669,7 @@
 					<td>17</td>
 					<td>461</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[17]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[17]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 
@@ -679,7 +679,7 @@
 					<td>25</td>
 					<td>2929</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[25]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[25]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 				</tr>
@@ -688,25 +688,25 @@
 					<td>2</td>
 					<td>14</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[2]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[2]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>10</td>
 					<td>91</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[10]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[10]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>18</td>
 					<td>581</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[18]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[18]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>26</td>
 					<td>3691</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[26]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[26]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 				</tr>
@@ -715,25 +715,25 @@
 					<td>3</td>
 					<td>18</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[3]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[3]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>11</td>
 					<td>115</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[11]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[11]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>19</td>
 					<td>732</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[19]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[19]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>27</td>
 					<td>4650</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[27]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[27]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 				</tr>
@@ -742,25 +742,25 @@
 					<td>4</td>
 					<td>72</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[4]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[4]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>12</td>
 					<td>145</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[12]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[12]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>20</td>
 					<td>922</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[20]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[20]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>28</td>
 					<td>5859</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[28]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[28]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 				</tr>
@@ -769,25 +769,25 @@
 					<td>5</td>
 					<td>28</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[5]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[5]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>13</td>
 					<td>183</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[13]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[13]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>21</td>
 					<td>1162</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[21]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[21]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>29</td>
 					<td>7382</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[29]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[29]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 				</tr>
 
@@ -795,25 +795,25 @@
 					<td>6</td>
 					<td>36</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[6]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[6]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>14</td>
 					<td>230</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[14]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[14]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>22</td>
 					<td>1464</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[22]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[22]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>30</td>
 					<td>9300</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[30]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[30]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 				</tr>
@@ -822,25 +822,25 @@
 					<td>7</td>
 					<td>45</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[7]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[7]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>15</td>
 					<td>290</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[15]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[15]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>23</td>
 					<td>1845</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[23]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[23]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>31</td>
 					<td>11718</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[31]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[31]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 				</tr>
@@ -849,25 +849,25 @@
 					<td>8</td>
 					<td>57</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[8]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[8]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>16</td>
 					<td>366</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[16]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[16]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>24</td>
 					<td>2325</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[24]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[24]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 					<td>32</td>
 					<td>14764</td>
 					<td class="val">
-						<input class="vceEdit vceNum spinPLAIN" type="text" id="filter[32]" min="-64" max="63"
+						<input class="vceEdit vceNum spinPLAIN" type="text" id="flt[32]" min="-64" max="63"
 							onchange="viewVCE_filters.onchange(this)" disabled />
 					</td>
 				</tr>
