colored spinner, floats over the content instead of pushing it down

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -166,13 +166,6 @@ TEST a "more button" design:
 							</tr>
 						</table>
 						<div class="dropdown-content" id="helpDropdown-content">
-							q
-
-
-							:q
-
-
-
 							<a id="aboutMenuItem" href="#" onclick="index.showAbout();">About</a>
 							<a id="preferencesMenuItem" href="#" onclick="index.showPreferences();">Preferences</a>
 						</div>
@@ -239,7 +232,7 @@ TEST a "more button" design:
 			<div class="col mh-100">
 
 				<div id="spinner" style="display:none;">
-					<div class="spinner-border" role="status">
+					<div class="spinner-border text-info"" role="status">
 						<span class="sr-only">Loading...</span>
 					</div>
 
