add divs for spinner style hack

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -98,8 +98,8 @@
 						</tr>
 						<tr>
 							<td>Oscillators</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="nOsc" min="1" max="16"
-									onchange="viewVCE_voice.setNumOscillators(this.value)" disabled /></td>
+							<td>`<div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="nOsc" min="1" max="16"
+									onchange="viewVCE_voice.setNumOscillators(this.value)" disabled /></div>d/td>
 						</tr>
 						<tr>
 							<td>Keys Playable</td>
@@ -121,24 +121,24 @@
 						</tr>
 						<tr>
 							<td>Vibrato Depth</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="VIBDEP" min="-128" max="128"
-									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateVibType)" disabled /></td>
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="VIBDEP" min="-128" max="128"
+									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateVibType)" disabled /></div></td>
 						</tr>
 						<tr>
 							<td>Vibrato Rate</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="VIBRAT" min="0" max="127"
-									onchange="viewVCE_voice.onchange(this)" disabled /></td>
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="VIBRAT" min="0" max="127"
+									onchange="viewVCE_voice.onchange(this)" disabled /></div></td>
 						</tr>
 						<tr>
 							<td>Vibrato Delay</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="VIBDEL" min="0" max="127"
-									onchange="viewVCE_voice.onchange(this);" disabled />
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="VIBDEL" min="0" max="127"
+									onchange="viewVCE_voice.onchange(this);" disabled /></div>
 							</td>
 						</tr>
 						<tr>
 							<td>Aperiodic Vibrato</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="APVIB" min="-128" max="128"
-									onchange="viewVCE_voice.onchange(this)" disabled />
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="APVIB" min="-128" max="128"
+									onchange="viewVCE_voice.onchange(this)" disabled /></div>
 								<!--FIXME:validate range-->
 							</td>
 						</tr>
@@ -148,14 +148,14 @@
 						</tr>
 						<tr>
 							<td>Amp Center</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="VACENT" min="0" max="32"
-									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateChart);" disabled />
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="VACENT" min="0" max="32"
+									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateChart);" disabled /></div>
 							</td>
 						</tr>
 						<tr>
 							<td>Amp Sensitivity</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="VASENS" min="0" max="31"
-									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateChart);" disabled />
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="VASENS" min="0" max="31"
+									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateChart);" disabled /></div>
 							</td>
 						</tr>
 						<tr>
@@ -164,14 +164,14 @@
 						</tr>
 						<tr>
 							<td>Timbre Center</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="VTCENT" min="0" max="32"
-									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateChart);" disabled />
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="VTCENT" min="0" max="32"
+									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateChart);" disabled /></div>
 							</td>
 						</tr>
 						<tr>
 							<td>Timbre Sensitivity</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="VTSENS" min="0" max="31"
-									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateChart);" disabled />
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="VTSENS" min="0" max="31"
+									onchange="viewVCE_voice.onchange(this,viewVCE_voice.updateChart);" disabled /></div>
 							</td>
 						</tr>
 						<tr>
@@ -180,8 +180,8 @@
 						</tr>
 						<tr>
 							<td>Transpose</td>
-							<td><input class="vceEdit vceNum spinPLAIN" type="text" id="VTRANS" min="-127" max="128"
-									onchange="viewVCE_voice.onchange(this)" disabled /></td>
+							<td><div class="spinwrapper"><input class="vceEdit vceNum spinPLAIN" type="text" id="VTRANS" min="-127" max="128"
+									onchange="viewVCE_voice.onchange(this)" disabled /></div></td>
 						</tr>
 						<tr>
 							<td>&nbsp;</td>
